@@ -57,7 +57,10 @@ class Post extends CActiveRecord
 		return array(
 			'author'=>array(self::BELONGS_TO, 'User', 'authorId'),
 			'comments'=>array(self::HAS_MANY, 'Comment', 'postId', 'order'=>'??.createTime'),
-			'tagFilter'=>array(self::MANY_MANY, 'Tag', 'PostTag(postId, tagId)', 'joinType'=>'INNER JOIN', 'condition'=>'??.name=:tag'),
+			'tagFilter'=>array(self::MANY_MANY, 'Tag', 'PostTag(postId, tagId)',
+				'together'=>true,
+				'joinType'=>'INNER JOIN',
+				'condition'=>'??.name=:tag'),
 		);
 	}
 
