@@ -88,7 +88,9 @@ public function relations()
 		'comments'=>array(self::HAS_MANY, 'Comment', 'postId',
 			'order'=>'??.createTime'),
 		'tagFilter'=>array(self::MANY_MANY, 'Tag', 'PostTag(postId, tagId)',
-			'joinType'=>'INNER JOIN', 'condition'=>'??.name=:tag'),
+			'together'=>true,
+			'joinType'=>'INNER JOIN',
+			'condition'=>'??.name=:tag'),
 	);
 }
 ~~~
